--- a/game.html
+++ b/game.html
@@ -81,7 +81,7 @@
         }
         if (j == -(i - 780)) {
             alert("Game Over !");
-            window.location.href = "main.html";
+            window.location.href = "index.html";
 
         }
     }, 10);
