--- a/game.html
+++ b/game.html
@@ -80,7 +80,7 @@
             i = 10;
         }
         if (j == -(i - 780)) {
-            alert("Game Over !");
+            alert("Game Over ! Your Score is " + (b - 5));
             window.location.href = "index.html";
 
         }
